--- a/product-photos/4.fail/serverless.yml
+++ b/product-photos/4.fail/serverless.yml
@@ -11,7 +11,7 @@ custom:
 provider:
   name: aws
   deploymentBucket: ${self:custom.helloRetail.deploymentBucket}
-  runtime: nodejs4.3
+  runtime: nodejs6.10
   profile: ${self:custom.private.profile}
   region: ${self:custom.private.region}
 
@@ -21,8 +21,9 @@ functions:
       'Fn::GetAtt': [ FailRole, Arn ]
     handler: fail.handler
     environment:
-      TABLE_PHOTO_ASSIGNMENTS_NAME:
-        Fn::ImportValue: ${self:custom.productPhotos.exportPhotoAssignmentsTableName}
+      TABLE_PHOTO_ASSIGNMENTS_NAME: 'photoAssignmentsTable'
+      # TODO KALEV - Put the table name in a central location for an easier reuse
+#        Fn::ImportValue: ${self:custom.productPhotos.exportPhotoAssignmentsTableName}
 
 resources:
   Resources:
@@ -65,7 +66,6 @@ resources:
                       - ':'
                       - - 'Fn::GetAtt': [ FailLogGroup, Arn ]
                         - '*'
-          - ${self:custom.productPhotos.deletePhotoAssignment}
   Outputs:
     FailLambdaName:
       Description: The Name of the Photo Assignments Fail Lambda
