--- a/product-photos/0.processor/serverless.yml
+++ b/product-photos/0.processor/serverless.yml
@@ -13,7 +13,7 @@ custom:
 provider:
   name: aws
   deploymentBucket: ${self:custom.helloRetail.deploymentBucket}
-  runtime: nodejs4.3
+  runtime: nodejs6.10
   profile: ${self:custom.private.profile}
   region: ${self:custom.private.region}
 
@@ -23,12 +23,13 @@ functions:
       'Fn::GetAtt': [ ProcessorRole, Arn ]
     handler: processor.processKinesisEvent
     environment:
-      ASSIGNMENTS_PER_REGISTRATION: ${self:custom.private.behaviors.assignmentsPerRegistration.${self:custom.stage}, self:custom.private.behaviors.assignmentsPerRegistration.default}
+      ASSIGNMENTS_PER_REGISTRATION: '3'
       STAGE: ${self:custom.stage}
       STEP_FUNCTION:
         'Fn::ImportValue': ${self:custom.productPhotos.exportPhotoAssignmentsStepFunctionArn}
-      TABLE_PHOTO_REGISTRATIONS_NAME:
-        'Fn::ImportValue': ${self:custom.productPhotos.exportPhotoRegistrationsTableName}
+      TABLE_PHOTO_REGISTRATIONS_NAME: 'photoRegistrationTable'
+      # TODO KALEV - Place the table name in a central location for easier reuse.
+#        'Fn::ImportValue': ${self:custom.productPhotos.exportPhotoRegistrationsTableName}
     events:
       - stream:
           arn: 'arn:aws:kinesis:${self:provider.region}:${self:custom.private.accountId}:stream/${self:custom.stage}RetailStream' # replace this with the below, once supported by Serverless
@@ -89,8 +90,6 @@ resources:
                     - 'kinesis:ListStreams'
                   Resource:
                     Fn::ImportValue: ${self:custom.retailStream.custom.exportRetailStreamArn}
-          - ${self:custom.productPhotos.putPhotoRegistrations}
-          - ${self:custom.productPhotos.updatePhotoRegistrations}
           - PolicyName: ExecuteStepFunction  # see https://forums.aws.amazon.com/thread.jspa?messageID=755476&tstart=0 for StepFunction IAM docs
             PolicyDocument:
               Version: '2012-10-17'
