--- a/product-photos/1.assign/serverless.yml
+++ b/product-photos/1.assign/serverless.yml
@@ -11,7 +11,7 @@ custom:
 provider:
   name: aws
   deploymentBucket: ${self:custom.helloRetail.deploymentBucket}
-  runtime: nodejs4.3
+  runtime: nodejs6.10
   profile: ${self:custom.private.profile}
   region: ${self:custom.private.region}
 
@@ -21,8 +21,9 @@ functions:
       'Fn::GetAtt': [ AssignRole, Arn ]
     handler: assign.handler
     environment:
-      TABLE_PHOTO_REGISTRATIONS_NAME:
-        Fn::ImportValue: ${self:custom.productPhotos.exportPhotoRegistrationsTableName}
+      TABLE_PHOTO_REGISTRATIONS_NAME: 'photoRegistrationTable'
+      # TODO KALEV - Place the table name in a central location for easier reuse.
+#        Fn::ImportValue: ${self:custom.productPhotos.exportPhotoRegistrationsTableName}
 
 resources:
   Resources:
@@ -65,8 +66,6 @@ resources:
                       - ':'
                       - - 'Fn::GetAtt': [ AssignLogGroup, Arn ]
                         - '*'
-          - ${self:custom.productPhotos.queryPhotoRegistrationsAssignmentsIndex}
-          - ${self:custom.productPhotos.updatePhotoRegistrations}
   Outputs:
     AssignLambdaName:
       Description: The Name of the Photo Assignments Assign Lambda
