typo in scripts

--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "photos:install:1":     "./build/1.install.sh \"Installing Product Photos - Processor Dependencies\"  ./product-photos/0.processor",
     "photos:install:2":     "./build/1.install.sh \"Installing Product Photos - Assign Dependencies\"     ./product-photos/1.assign",
     "photos:install:3":     "./build/1.install.sh \"Installing Product Photos - Message Dependencies\"    ./product-photos/2.message",
-    "photos:install:4":     "./build/1.install.sh \"Installing Product Photos - Record Dependencies\"    ./product-photos/2.record",
+    "photos:install:4":     "./build/1.install.sh \"Installing Product Photos - Record Dependencies\"     ./product-photos/2.record",
     "photos:install:5":     "./build/1.install.sh \"Installing Product Photos - Receive Dependencies\"    ./product-photos/3.receive",
-    "photos:install:6":     "./build/1.install.sh \"Installing Product Photos - Fail Dependencies\"    ./product-photos/4.fail",
-    "photos:install:7":     "./build/1.install.sh \"Installing Product Photos - Success Dependencies\"    ./product-photos/.success",
+    "photos:install:6":     "./build/1.install.sh \"Installing Product Photos - Fail Dependencies\"       ./product-photos/4.fail",
+    "photos:install:7":     "./build/1.install.sh \"Installing Product Photos - Success Dependencies\"    ./product-photos/4.success",
     "photos:install:8":     "./build/1.install.sh \"Installing Product Photos - Unmessage Dependencies\"  ./product-photos/5.unmessage",
     "photos:install:9":     "./build/1.install.sh \"Installing Product Photos - Report Dependencies\"     ./product-photos/6.report",
     "photos:install:all":   "npm run photos:install:1 && npm run photos:install:2 && npm run photos:install:3 && npm run photos:install:4 && npm run photos:install:5 && npm run photos:install:6 && npm run photos:install:7 && npm run photos:install:8 && npm run photos:install:9",
