--- a/product-photos/1.assign/package.json
+++ b/product-photos/1.assign/package.json
@@ -14,6 +14,6 @@
   "homepage": "https://github.com/Nordstrom/hello-retail/product-photos#readme",
   "dependencies": {
     "bluebird": "^3.5.0",
-    "kv-store": "file:../../../serverless-ifc/src/kv-store"
+    "kv-store": "file:../../../trapeze/src/kv-store"
   }
 }
