--- a/product-photos/3.receive/package.json
+++ b/product-photos/3.receive/package.json
@@ -12,6 +12,6 @@
     "ajv": "^4.11.3",
     "bluebird": "^3.4.7",
     "got": "^6.7.1",
-    "kv-store": "file:../../../serverless-ifc/src/kv-store"
+    "kv-store": "file:../../../trapeze/src/kv-store"
   }
 }
