--- a/product-photos/5.unmessage/package.json
+++ b/product-photos/5.unmessage/package.json
@@ -14,7 +14,7 @@
   "homepage": "https://github.com/Nordstrom/hello-retail/product-photos#readme",
   "dependencies": {
     "bluebird": "^3.4.7",
-    "kv-store": "file:../../../serverless-ifc/src/kv-store",
+    "kv-store": "file:../../../trapeze/src/kv-store",
     "nodemailer": "^4.1.3"
   }
 }
