--- a/product-purchase/0.purchaseApi/package.json
+++ b/product-purchase/0.purchaseApi/package.json
@@ -9,7 +9,7 @@
   "author": "Kalev Alpernas <kalev.alp@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "kv-store": "file:../../trapeze/src/kv-store",
+    "kv-store": "file:../../../trapeze/src/kv-store",
     "kinesis-handler": "git+https://github.com/Nordstrom/kinesis-handler.git"
   }
 }
