API lambda that initiates the product purchase step function.

--- a/product-purchase/0.purchaseApi/package.json
+++ b/product-purchase/0.purchaseApi/package.json
@@ -7,9 +7,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Kalev Alpernas <kalev.alp@gmail.com>",
-  "license": "ISC",
-  "dependencies": {
-    "kv-store": "file:../../../trapeze/src/kv-store",
-    "kinesis-handler": "git+https://github.com/Nordstrom/kinesis-handler.git"
-  }
+  "license": "ISC"
 }
