--- a/product-purchase/3.authorize-cc/serverless.yml
+++ b/product-purchase/3.authorize-cc/serverless.yml
@@ -34,7 +34,7 @@ resources:
       Type: AWS::IAM::Role
       Properties:
         Path: /
-        RoleName: ${self:custom.stage}PurchaseProductAuthorize{self:custom.purchaseProduct.purchaseProductVersion}
+        RoleName: ${self:custom.stage}PurchaseProductAuthorize${self:custom.purchaseProduct.purchaseProductVersion}
         AssumeRolePolicyDocument:
           Version: '2012-10-17'
           Statement:
