--- a/product-purchase/4.publish/serverless.yml
+++ b/product-purchase/4.publish/serverless.yml
@@ -40,7 +40,7 @@ resources:
       Type: AWS::IAM::Role
       Properties:
         Path: /
-        RoleName: ${self:custom.stage}PurchaseProductPublish{self:custom.purchaseProduct.purchaseProductVersion}
+        RoleName: ${self:custom.stage}PurchaseProductPublish${self:custom.purchaseProduct.purchaseProductVersion}
         AssumeRolePolicyDocument:
           Version: '2012-10-17'
           Statement:
