--- a/product-purchase/3.authorize-cc/serverless.yml
+++ b/product-purchase/3.authorize-cc/serverless.yml
@@ -20,6 +20,8 @@ functions:
     role:
       'Fn::GetAtt': [ AuthorizeRole, Arn ]
     handler: authorize.handler
+    environment:
+      TABLE_CREDIT_CARDS_NAME: 'creditCardsTable'
 
 resources:
   Resources:
