Fixed getPrice in the purchase subsystem.

--- a/product-purchase/2.get-price/serverless.yml
+++ b/product-purchase/2.get-price/serverless.yml
@@ -21,7 +21,7 @@ functions:
       'Fn::GetAtt': [ GetPriceRole, Arn ]
     handler: getPrice.handler
     environment:
-      TABLE_PRODUCT_CATALOG_NAME: 'productCatalogTable'
+      TABLE_PRODUCT_PRICE_NAME: 'productPriceTable'
 
 resources:
   Resources:
