Shortened the project name to avoid bumping into the AWS name length limit.

--- a/product-purchase/productPurchase.yml
+++ b/product-purchase/productPurchase.yml
@@ -1,5 +1,5 @@
 # Project
-name: ${self:custom.helloRetail.name}-purchase-product
+name: ${self:custom.helloRetail.name}-purpro
 purchaseProductVersion: 1
 
 # Lambdas
